# news-mvp

./: .env.example  .gitignore  Makefile  README.md  STORAGE_PLAN.md  pyproject.toml  pyrightconfig.json  schema.sql  setup.py  test_ynet_category_enhanced.csv
.github/workflows/: ci.yml  etl_cron.yml  etl_schedule.yml
configs/: base.yaml  dev.yaml  prod.yaml  staging.yaml
data/master/: master_haaretz.csv  master_hayom.csv  master_news.csv  master_ynet.csv
data/parquet/20240814/hayom/: master.parquet
data/parquet/20250910/hayom/: master.parquet
data/parquet/20250918/haaretz/: master.parquet
data/parquet/20250918/hayom/: master.parquet
data/parquet/20250918/ynet/: master.parquet
data/parquet/20250919/haaretz/: master.parquet
data/parquet/20250919/hayom/: master.parquet
data/parquet/20250919/ynet/: master.parquet
data/parquet/20250920/haaretz/: master.parquet
data/parquet/20250920/hayom/: master.parquet
data/parquet/20250920/ynet/: master.parquet
data/parquet/20250921/haaretz/: master.parquet
data/parquet/20250921/hayom/: master.parquet
data/parquet/20250921/ynet/: master.parquet
data/parquet/20250922/haaretz/: master.parquet
data/parquet/20250922/hayom/: master.parquet
data/parquet/20250922/ynet/: master.parquet
data/parquet/20250923/haaretz/: master.parquet
data/parquet/20250923/hayom/: master.parquet
data/parquet/20250923/ynet/: master.parquet
data/parquet/20250924/haaretz/: master.parquet
data/parquet/20250924/hayom/: master.parquet
data/parquet/20250924/ynet/: master.parquet
data/parquet/20250925/haaretz/: master.parquet
data/parquet/20250925/hayom/: master.parquet
data/parquet/20250925/ynet/: master.parquet
data/parquet/20250926/haaretz/: master.parquet
data/parquet/20250926/hayom/: master.parquet
data/parquet/20250926/ynet/: master.parquet
data/parquet/20250927/haaretz/: master.parquet
data/parquet/20250927/hayom/: master.parquet
data/pics/20251009/: .gitkeep
data/raw/haaretz/: haaretz_20250916_135851.xml  haaretz_20250916_145632.xml
data/raw/ynet/: ynet_20250916_130320.xml  ynet_20250916_152524.xml
docker/: Dockerfile
etl/: api.py
etl/extract/: __init__.py  kan_fetcher.py  rss_extractor.py
etl/load/: create_csv_to_load_by_source.py  enhancer_by_source.py
etl/transform/: extract_by_source.py
scripts/: bootstrap_dirs.py  cluster_topics.py  embeddings.py  etl_csv_to_parquet.py  etl_storage.py  ge_validate.py  generate_parquet.py  inspect_mapping.py  load_database.py  manage_images.py  master_to_polars.py  polars_to_paquets.py  polars_to_parquets.py  polars_validation.py  print_config.py
src/news_mvp/: cli.py  constants.py  logging_setup.py  paths.py  schema_io.py  schemas.py  settings.py
src/news_mvp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/news_mvp/dash_app/: __init__.py  app.py  callbacks.py  data.py  layout.py
src/news_mvp/etl/: .gitignore  README.md  api.py  cli.py  config.py  requirements.txt
tests/: test_api.py  test_boot.py  test_enhancer_selectors.py  test_etl_config.py  test_etl_dry.py  test_ge_validate.py  test_ingest_config.py  test_paths.py  test_structured_logging.py
(+63 files in other folders)
