[project]
name = "news-mvp"
version = "0.1.0"
description = "Unified news MVP with ETL"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "click>=8.1",
  "rich>=13.7",
  "python-dotenv>=1.0",
  "pandas>=2.2",
  "pyarrow>=17.0"
]

[project.scripts]
news-mvp = "news_mvp.cli:app"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
