[project][project]

name = "news-mvp"name = "news-mvp"

version = "0.1.0"version = "0.1.0"

description = "Unified news MVP with ETL"description = "Unified news MVP with ETL"

readme = "README.md"readme = "README.md"

requires-python = ">=3.11,<3.12"requires-python = ">=3.11,<3.12"

dependencies = [dependencies = [

  "typer>=0.12",  "typer>=0.12",

  "pydantic>=2.8",  "pydantic>=2.8",

  "pydantic-settings>=2.4",  "pydantic-settings>=2.4",

  "pyyaml>=6.0",  "pyyaml>=6.0",

  "structlog>=24.1",  "structlog>=24.1",

  "click>=8.1",  "click>=8.1",

  "rich>=13.7",  "rich>=13.7",

  "python-dotenv>=1.0",  "python-dotenv>=1.0",

  "pandas>=2.2",  "pandas>=2.2",

  "pyarrow>=17.0",  "pyarrow>=17.0",

  "requests>=2.32",  "requests>=2.32",

  "feedparser>=6.0",  "feedparser>=6.0",

  "beautifulsoup4>=4.12",  "beautifulsoup4>=4.12",

  "lxml>=5",  "lxml>=5",

  "polars>=1.6",  "polars>=1.6",

  "httpx>=0.27"  "httpx>=0.27"

]]



[project.scripts][project.scripts]

news-mvp = "news_mvp.cli:app"news-mvp = "news_mvp.cli:app"



[project.optional-dependencies][project.optional-dependencies]

validation = ["great_expectations>=0.18"]validation = ["great_expectations>=0.18"]

dev = [dev = [

  "pre-commit>=3.6",  "pre-commit>=3.6",

  "pytest>=8.0",  "pytest>=8.0",

  "ruff>=0.3.0",  "ruff>=0.3.0",

  "pyright>=1.1"  "pyright>=1.1"

]]



[build-system][build-system]

requires = ["setuptools>=69", "wheel"]requires = ["setuptools>=69", "wheel"]

build-backend = "setuptools.build_meta"build-backend = "setuptools.build_meta"



[tool.setuptools][tool.setuptools]

package-dir = {"" = "src"}package-dir = {"" = "src"}



[tool.setuptools.packages.find][tool.setuptools.packages.find]

where = ["src"]where = ["src"]
